<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nested_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/app_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/version_1_0_0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/infotitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_large"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:singleLine="false"
                android:text="@string/info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/disclaimertitle"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_90" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_large"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:text="@string/disclaimer"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_90" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xlarge" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="@dimen/spacing_smlarge"
                android:clickable="true"
                android:src="@drawable/star"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="normal"
                app:rippleColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>