<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardBackgroundColor="#DDD9E3"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/lyt_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_stadium">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey_200"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/u00a9_stadiumguide_com"
                    android:textColor="@color/grey_20"
                    android:visibility="gone" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/stadium_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/stadium_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="Santiago Bernabue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/capacity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/stadium_capacity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="180,000 human"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/stadium_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="@string/qatar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/opening"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/stadium_opening_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="2017"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"

                    />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/button"
                    style="@style/Button.Primary.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="#78547D"
                    android:gravity="center"
                    android:text="@string/detailst"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>