<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_id">
        </com.google.android.gms.ads.AdView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollingCache="true" />

    <LinearLayout
        android:id="@+id/lyt_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_no_internet_satellite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whoops"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <!--<android.support.v7.widget.AppCompatButton-->
        <!--android:id="@+id/bt_retry"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_xlarge"-->
        <!--android:background="@drawable/btn_rounded_primary"-->
        <!--android:text="@string/RETRY"-->
        <!--android:textColor="@android:color/white" />-->

    </LinearLayout>

</LinearLayout>