<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.worldcuptracking.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar" />
        <include layout="@layout/countdown" />

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lyt_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_no_internet_satellite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whoops"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

        <!--<android.support.v7.widget.AppCompatButton-->
        <!--android:id="@+id/bt_retry"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_xlarge"-->
        <!--android:background="@drawable/btn_rounded_primary"-->
        <!--android:text="@string/RETRY"-->
        <!--android:textColor="@android:color/white" />-->
    </LinearLayout>
    <include layout="@layout/activity_home_card" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<include layout="@layout/content_main" />-->

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
